# RAG-Thesis

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
rag_thesis/: __init__.py  chunking.py  cli.py  config.py  interaction_analysis.py  io_utils.py  llm_client.py  parallel.py  prompts.py  s1_ingestion.py  s2_ground_truth.py  s3_baseline.py  s4_rag_inference.py  s5_evaluation.py  s6_analysis.py  s7_extract_categories.py  s8_validate_categories.py  stats_utils.py  text_utils.py
tests/: test_analysis.py  test_canonical_context.py  test_evaluation.py  test_extract_categories.py  test_prompts.py  test_stats_utils.py
